2004-12-15  Sushma Rai <rsushma@novell.com>

	* configure.in: Corrected camel provider directory path.

2004-12-15  Sushma Rai <rsushma@novell.com>
	
	* calendar/e-cal-backend-exchange-calendar.c:
	Fixed several memory leaks.

2004-12-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	* lib/e2k-path.c : Moved this from evolution/e-util as this is no
	longer present there after camel moved to e-d-s.
	* lib/e2k-path.h : Similar
	* lib/Makefile.am : Included the above files
	* storage/exchange-offline-utils.c : Has the utility functions used
	by offline code.
	* storage/exchange-offline-utils.h : Similar
	* storage/Makefile.am : Added the above files
	*  camel/camel-exchange-store.c : Fixed to make use of e2k-path methods
	(exchange_path_to_physical : Added this new function from e-path.c
	* storage/exchange-hierarchy-webdav.c : Now includes e2k-path.h
	* storage/exchange-offline-listener.c : Marked for offline.
	* storage/e-folder-exchange.c : Now makes use of e2k-path.h 

2004-12-14  Sushma Rai <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (proppatch_address)
	(e_book_backend_exchange_modify_contact)(notify_remove):
	Fixed some memory leaks.

	* addressbook/e-book-backend-gal.c (contact_list_handler)
	(start_book_view)(load_source): ditto

	* storage/exchange-migrate.c (make_dir)(form_dir_path)
	(get_contacts_dir_from_filename): ditto

2004-12-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Fix up camel version to now be 1.2
	* camel/Makefile.am : Include the GLIB_CFLAGS

2004-12-10  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (add_ical): Fixed some
	memory leaks
	* calendar/e-cal-backend-exchange.c : Some more here.

2004-12-09  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (open_calendar)
	(create_object)(send_objects) : Return appropriate error messages
	when in offline
	* calendar/e-cal-backend-exchange-tasks.c (open_task)
	(create_task_object) : Similar