@@ -1,3 +1,9 @@
+2004-12-15  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange.c : Fixed some memory leaks.
+	* calendar/e-cal-backend-exchange-tasks.c : Modified a structure member
+	* calendar/e-cal-backend-exchange.h : Similar
+
 2004-12-15  Sushma Rai <rsushma@novell.com>
 
 	* configure.in: Corrected camel provider directory path.
